[gd_scene load_steps=5 format=3 uid="uid://dsrjwl4y5t6cm"]

[ext_resource type="Texture2D" uid="uid://bcn6vqxneimqc" path="res://icon.svg" id="1_5nuny"]
[ext_resource type="Script" uid="uid://b45w06fh05jbj" path="res://scripts/Cards/Bondi/strike.gd" id="1_nka18"]
[ext_resource type="PackedScene" uid="uid://bbet2i3hi13go" path="res://scenes/card_point.tscn" id="3_0dnmv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dnmv"]
size = Vector2(126, 179)

[node name="Strike" type="Node2D"]
script = ExtResource("1_nka18")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(1, 1.4570313)
texture = ExtResource("1_5nuny")

[node name="Strikearea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Strikearea"]
shape = SubResource("RectangleShape2D_0dnmv")

[node name="CardPoint" parent="." instance=ExtResource("3_0dnmv")]

[connection signal="mouse_entered" from="Strikearea" to="." method="_on_strikearea_mouse_entered"]
[connection signal="mouse_exited" from="Strikearea" to="." method="_on_strikearea_mouse_exited"]
